# Mnemosyne

./: .env.example  .gitignore  README.md  claude.md  docker-compose.yml  pyproject.toml  test_output.txt
data/test/: test_report_1.md
docs/: reranking-alternatives.md
prompts/: README.md  normalization.md  react_agent.md  similarity_analysis.md
src/mnemosyne/: config.py  main.py
src/mnemosyne/agents/: __init__.py  react.py
src/mnemosyne/core/: __init__.py  embeddings.py  search.py  truncation.py
src/mnemosyne/db/: __init__.py  qdrant.py
src/mnemosyne/llm/: __init__.py  client.py
src/mnemosyne/models/: __init__.py  schema.py
tests/: test_react_agent.py
